// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`autoprefixer > autoprefixer 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
      "es2024": true,
      "node": true,
    },
    "globals": {
      "document": "readonly",
      "window": "readonly",
    },
    "ignorePatterns": [
      "coverage",
    ],
    "overrides": [
      {
        "files": [
          "**/*.test.{js,jsx}",
          "**/*.test.{ts,tsx}",
        ],
        "rules": {
          "no-unused-expressions": "off",
        },
      },
    ],
    "plugins": [
      "import",
      "promise",
    ],
    "rules": {
      "accessor-pairs": [
        "error",
        {
          "enforceForClassMembers": true,
          "setWithoutGet": true,
        },
      ],
      "array-callback-return": [
        "error",
        {
          "allowImplicit": false,
          "checkForEach": false,
        },
      ],
      "block-scoped-var": "error",
      "constructor-super": "error",
      "curly": [
        "error",
        "multi-line",
      ],
      "default-case-last": "error",
      "eqeqeq": [
        "error",
        "always",
        {
          "null": "ignore",
        },
      ],
      "for-direction": "error",
      "import-x/first": "error",
      "import-x/no-absolute-path": [
        "error",
        {
          "amd": false,
          "commonjs": true,
          "esmodule": true,
        },
      ],
      "import-x/no-duplicates": "error",
      "import-x/no-named-default": "error",
      "import-x/no-webpack-loader-syntax": "error",
      "new-cap": [
        "error",
        {
          "capIsNew": false,
          "newIsCap": true,
          "properties": true,
        },
      ],
      "no-array-constructor": "error",
      "no-async-promise-executor": "error",
      "no-caller": "error",
      "no-case-declarations": "error",
      "no-class-assign": "error",
      "no-compare-neg-zero": "error",
      "no-cond-assign": "error",
      "no-const-assign": "error",
      "no-constant-condition": [
        "error",
        {
          "checkLoops": false,
        },
      ],
      "no-control-regex": "error",
      "no-debugger": "error",
      "no-delete-var": "error",
      "no-dupe-class-members": "error",
      "no-dupe-else-if": "error",
      "no-dupe-keys": "error",
      "no-duplicate-case": "error",
      "no-empty": [
        "error",
        {
          "allowEmptyCatch": true,
        },
      ],
      "no-empty-character-class": "error",
      "no-empty-pattern": "error",
      "no-eval": "error",
      "no-ex-assign": "error",
      "no-extend-native": "error",
      "no-extra-bind": "error",
      "no-extra-boolean-cast": "error",
      "no-fallthrough": "error",
      "no-func-assign": "error",
      "no-global-assign": "error",
      "no-import-assign": "error",
      "no-invalid-regexp": "error",
      "no-irregular-whitespace": "error",
      "no-iterator": "error",
      "no-labels": [
        "error",
        {
          "allowLoop": false,
          "allowSwitch": false,
        },
      ],
      "no-lone-blocks": "error",
      "no-lonely-if": "error",
      "no-loss-of-precision": "error",
      "no-multi-str": "error",
      "no-nested-ternary": "error",
      "no-new-func": "error",
      "no-new-native-nonconstructor": "error",
      "no-new-wrappers": "error",
      "no-obj-calls": "error",
      "no-object-constructor": "error",
      "no-proto": "error",
      "no-prototype-builtins": "error",
      "no-redeclare": [
        "error",
        {
          "builtinGlobals": false,
        },
      ],
      "no-regex-spaces": "error",
      "no-return-assign": [
        "error",
        "except-parens",
      ],
      "no-self-assign": [
        "error",
        {
          "props": true,
        },
      ],
      "no-self-compare": "error",
      "no-sequences": "error",
      "no-setter-return": "error",
      "no-shadow-restricted-names": "error",
      "no-sparse-arrays": "error",
      "no-template-curly-in-string": "error",
      "no-this-before-super": "error",
      "no-throw-literal": "error",
      "no-unassigned-vars": "error",
      "no-unexpected-multiline": "error",
      "no-unneeded-ternary": [
        "error",
        {
          "defaultAssignment": false,
        },
      ],
      "no-unsafe-finally": "error",
      "no-unsafe-negation": "error",
      "no-unsafe-optional-chaining": "error",
      "no-unused-expressions": [
        "error",
        {
          "allowShortCircuit": true,
          "allowTaggedTemplates": true,
          "allowTernary": true,
        },
      ],
      "no-unused-vars": [
        "error",
        {
          "args": "after-used",
          "vars": "all",
        },
      ],
      "no-useless-backreference": "error",
      "no-useless-call": "error",
      "no-useless-catch": "error",
      "no-useless-computed-key": "error",
      "no-useless-constructor": "error",
      "no-useless-escape": "error",
      "no-useless-rename": "error",
      "no-useless-return": "error",
      "no-var": "warn",
      "no-void": "error",
      "no-with": "error",
      "prefer-exponentiation-operator": "error",
      "prefer-promise-reject-errors": "error",
      "prefer-rest-params": "error",
      "prefer-spread": "error",
      "preserve-caught-error": "error",
      "promise/param-names": "error",
      "require-yield": "error",
      "symbol-description": "error",
      "use-isnan": [
        "error",
        {
          "enforceForIndexOf": true,
          "enforceForSwitchCase": true,
        },
      ],
      "valid-typeof": [
        "error",
        {
          "requireStringLiterals": true,
        },
      ],
      "yoda": [
        "error",
        "never",
      ],
    },
  },
  "skipped": {
    "nursery": [
      "getter-return",
      "import-x/export",
      "no-misleading-character-class",
      "no-undef",
      "no-unreachable",
    ],
    "typeAware": [],
    "unsupported": [
      "camelcase",
      "dot-notation",
      "func-name-matching",
      "n/global-require",
      "n/handle-callback-err",
      "n/no-deprecated-api",
      "n/no-exports-assign",
      "n/no-extraneous-require",
      "n/no-missing-require",
      "n/no-new-require",
      "n/no-path-concat",
      "n/no-unpublished-require",
      "n/no-unsupported-features/es-builtins",
      "n/no-unsupported-features/es-syntax",
      "n/no-unsupported-features/node-builtins",
      "n/prefer-node-protocol",
      "n/process-exit-as-throw",
      "no-dupe-args",
      "no-implied-eval",
      "no-invalid-this",
      "no-octal",
      "no-octal-escape",
      "no-shadow",
      "no-undef-init",
      "no-unmodified-loop-condition",
      "no-unreachable-loop",
      "no-use-before-define",
      "object-shorthand",
      "one-var",
      "perfectionist/sort-array-includes",
      "perfectionist/sort-classes",
      "perfectionist/sort-decorators",
      "perfectionist/sort-enums",
      "perfectionist/sort-export-attributes",
      "perfectionist/sort-exports",
      "perfectionist/sort-heritage-clauses",
      "perfectionist/sort-import-attributes",
      "perfectionist/sort-imports",
      "perfectionist/sort-interfaces",
      "perfectionist/sort-intersection-types",
      "perfectionist/sort-jsx-props",
      "perfectionist/sort-maps",
      "perfectionist/sort-named-exports",
      "perfectionist/sort-named-imports",
      "perfectionist/sort-object-types",
      "perfectionist/sort-objects",
      "perfectionist/sort-sets",
      "perfectionist/sort-switch-case",
      "perfectionist/sort-union-types",
      "perfectionist/sort-variable-declarations",
      "prefer-arrow-callback",
      "prefer-let/prefer-let",
      "prefer-regex-literals",
    ],
  },
  "warnings": [],
}
`;

exports[`autoprefixer --js-plugins > autoprefixer--js-plugins 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
      "es2024": true,
      "node": true,
    },
    "globals": {
      "document": "readonly",
      "window": "readonly",
    },
    "ignorePatterns": [
      "coverage",
    ],
    "jsPlugins": [
      "eslint-plugin-perfectionist",
      "eslint-plugin-prefer-let",
    ],
    "overrides": [
      {
        "files": [
          "**/*.test.{js,jsx}",
          "**/*.test.{ts,tsx}",
        ],
        "rules": {
          "no-unused-expressions": "off",
        },
      },
    ],
    "plugins": [
      "import",
      "promise",
    ],
    "rules": {
      "accessor-pairs": [
        "error",
        {
          "enforceForClassMembers": true,
          "setWithoutGet": true,
        },
      ],
      "array-callback-return": [
        "error",
        {
          "allowImplicit": false,
          "checkForEach": false,
        },
      ],
      "block-scoped-var": "error",
      "constructor-super": "error",
      "curly": [
        "error",
        "multi-line",
      ],
      "default-case-last": "error",
      "eqeqeq": [
        "error",
        "always",
        {
          "null": "ignore",
        },
      ],
      "for-direction": "error",
      "import-x/first": "error",
      "import-x/no-absolute-path": [
        "error",
        {
          "amd": false,
          "commonjs": true,
          "esmodule": true,
        },
      ],
      "import-x/no-duplicates": "error",
      "import-x/no-named-default": "error",
      "import-x/no-webpack-loader-syntax": "error",
      "new-cap": [
        "error",
        {
          "capIsNew": false,
          "newIsCap": true,
          "properties": true,
        },
      ],
      "no-array-constructor": "error",
      "no-async-promise-executor": "error",
      "no-caller": "error",
      "no-case-declarations": "error",
      "no-class-assign": "error",
      "no-compare-neg-zero": "error",
      "no-cond-assign": "error",
      "no-const-assign": "error",
      "no-constant-condition": [
        "error",
        {
          "checkLoops": false,
        },
      ],
      "no-control-regex": "error",
      "no-debugger": "error",
      "no-delete-var": "error",
      "no-dupe-class-members": "error",
      "no-dupe-else-if": "error",
      "no-dupe-keys": "error",
      "no-duplicate-case": "error",
      "no-empty": [
        "error",
        {
          "allowEmptyCatch": true,
        },
      ],
      "no-empty-character-class": "error",
      "no-empty-pattern": "error",
      "no-eval": "error",
      "no-ex-assign": "error",
      "no-extend-native": "error",
      "no-extra-bind": "error",
      "no-extra-boolean-cast": "error",
      "no-fallthrough": "error",
      "no-func-assign": "error",
      "no-global-assign": "error",
      "no-import-assign": "error",
      "no-invalid-regexp": "error",
      "no-irregular-whitespace": "error",
      "no-iterator": "error",
      "no-labels": [
        "error",
        {
          "allowLoop": false,
          "allowSwitch": false,
        },
      ],
      "no-lone-blocks": "error",
      "no-lonely-if": "error",
      "no-loss-of-precision": "error",
      "no-multi-str": "error",
      "no-nested-ternary": "error",
      "no-new-func": "error",
      "no-new-native-nonconstructor": "error",
      "no-new-wrappers": "error",
      "no-obj-calls": "error",
      "no-object-constructor": "error",
      "no-proto": "error",
      "no-prototype-builtins": "error",
      "no-redeclare": [
        "error",
        {
          "builtinGlobals": false,
        },
      ],
      "no-regex-spaces": "error",
      "no-return-assign": [
        "error",
        "except-parens",
      ],
      "no-self-assign": [
        "error",
        {
          "props": true,
        },
      ],
      "no-self-compare": "error",
      "no-sequences": "error",
      "no-setter-return": "error",
      "no-shadow-restricted-names": "error",
      "no-sparse-arrays": "error",
      "no-template-curly-in-string": "error",
      "no-this-before-super": "error",
      "no-throw-literal": "error",
      "no-unassigned-vars": "error",
      "no-unexpected-multiline": "error",
      "no-unneeded-ternary": [
        "error",
        {
          "defaultAssignment": false,
        },
      ],
      "no-unsafe-finally": "error",
      "no-unsafe-negation": "error",
      "no-unsafe-optional-chaining": "error",
      "no-unused-expressions": [
        "error",
        {
          "allowShortCircuit": true,
          "allowTaggedTemplates": true,
          "allowTernary": true,
        },
      ],
      "no-unused-vars": [
        "error",
        {
          "args": "after-used",
          "vars": "all",
        },
      ],
      "no-useless-backreference": "error",
      "no-useless-call": "error",
      "no-useless-catch": "error",
      "no-useless-computed-key": "error",
      "no-useless-constructor": "error",
      "no-useless-escape": "error",
      "no-useless-rename": "error",
      "no-useless-return": "error",
      "no-var": "warn",
      "no-void": "error",
      "no-with": "error",
      "perfectionist/sort-array-includes": [
        "warn",
        {
          "order": "asc",
          "type": "alphabetical",
        },
      ],
      "perfectionist/sort-classes": [
        "warn",
        {
          "order": "asc",
          "type": "alphabetical",
        },
      ],
      "perfectionist/sort-decorators": [
        "warn",
        {
          "order": "asc",
          "type": "alphabetical",
        },
      ],
      "perfectionist/sort-enums": [
        "warn",
        {
          "order": "asc",
          "type": "alphabetical",
        },
      ],
      "perfectionist/sort-export-attributes": [
        "warn",
        {
          "order": "asc",
          "type": "alphabetical",
        },
      ],
      "perfectionist/sort-exports": [
        "warn",
        {
          "order": "asc",
          "type": "alphabetical",
        },
      ],
      "perfectionist/sort-heritage-clauses": [
        "warn",
        {
          "order": "asc",
          "type": "alphabetical",
        },
      ],
      "perfectionist/sort-import-attributes": [
        "warn",
        {
          "order": "asc",
          "type": "alphabetical",
        },
      ],
      "perfectionist/sort-imports": [
        "warn",
        {
          "groups": [
            "side-effect",
            "side-effect-style",
            "style",
            [
              "builtin",
              "external",
              "unknown",
            ],
            [
              "internal",
              "parent",
              "sibling",
              "index",
            ],
          ],
          "newlinesBetween": 1,
          "order": "asc",
          "type": "alphabetical",
        },
      ],
      "perfectionist/sort-interfaces": [
        "warn",
        {
          "order": "asc",
          "type": "alphabetical",
        },
      ],
      "perfectionist/sort-intersection-types": [
        "warn",
        {
          "order": "asc",
          "type": "alphabetical",
        },
      ],
      "perfectionist/sort-jsx-props": [
        "warn",
        {
          "order": "asc",
          "type": "alphabetical",
        },
      ],
      "perfectionist/sort-maps": [
        "warn",
        {
          "order": "asc",
          "type": "alphabetical",
        },
      ],
      "perfectionist/sort-named-exports": [
        "warn",
        {
          "order": "asc",
          "type": "alphabetical",
        },
      ],
      "perfectionist/sort-named-imports": [
        "warn",
        {
          "order": "asc",
          "type": "alphabetical",
        },
      ],
      "perfectionist/sort-object-types": [
        "warn",
        {
          "order": "asc",
          "type": "alphabetical",
        },
      ],
      "perfectionist/sort-objects": [
        "warn",
        {
          "order": "asc",
          "type": "alphabetical",
        },
      ],
      "perfectionist/sort-sets": [
        "warn",
        {
          "order": "asc",
          "type": "alphabetical",
        },
      ],
      "perfectionist/sort-switch-case": [
        "warn",
        {
          "order": "asc",
          "type": "alphabetical",
        },
      ],
      "perfectionist/sort-union-types": [
        "warn",
        {
          "order": "asc",
          "type": "alphabetical",
        },
      ],
      "perfectionist/sort-variable-declarations": [
        "warn",
        {
          "order": "asc",
          "type": "alphabetical",
        },
      ],
      "prefer-exponentiation-operator": "error",
      "prefer-let/prefer-let": "error",
      "prefer-promise-reject-errors": "error",
      "prefer-rest-params": "error",
      "prefer-spread": "error",
      "preserve-caught-error": "error",
      "promise/param-names": "error",
      "require-yield": "error",
      "symbol-description": "error",
      "use-isnan": [
        "error",
        {
          "enforceForIndexOf": true,
          "enforceForSwitchCase": true,
        },
      ],
      "valid-typeof": [
        "error",
        {
          "requireStringLiterals": true,
        },
      ],
      "yoda": [
        "error",
        "never",
      ],
    },
  },
  "skipped": {
    "nursery": [
      "getter-return",
      "import-x/export",
      "no-misleading-character-class",
      "no-undef",
      "no-unreachable",
    ],
    "typeAware": [],
    "unsupported": [
      "camelcase",
      "dot-notation",
      "func-name-matching",
      "n/global-require",
      "n/handle-callback-err",
      "n/no-deprecated-api",
      "n/no-exports-assign",
      "n/no-extraneous-require",
      "n/no-missing-require",
      "n/no-new-require",
      "n/no-path-concat",
      "n/no-unpublished-require",
      "n/no-unsupported-features/es-builtins",
      "n/no-unsupported-features/es-syntax",
      "n/no-unsupported-features/node-builtins",
      "n/prefer-node-protocol",
      "n/process-exit-as-throw",
      "no-dupe-args",
      "no-implied-eval",
      "no-invalid-this",
      "no-octal",
      "no-octal-escape",
      "no-shadow",
      "no-undef-init",
      "no-unmodified-loop-condition",
      "no-unreachable-loop",
      "no-use-before-define",
      "object-shorthand",
      "one-var",
      "prefer-arrow-callback",
      "prefer-regex-literals",
    ],
  },
  "warnings": [],
}
`;

exports[`autoprefixer --type-aware > autoprefixer--type-aware 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
      "es2024": true,
      "node": true,
    },
    "globals": {
      "document": "readonly",
      "window": "readonly",
    },
    "ignorePatterns": [
      "coverage",
    ],
    "overrides": [
      {
        "files": [
          "**/*.test.{js,jsx}",
          "**/*.test.{ts,tsx}",
        ],
        "rules": {
          "no-unused-expressions": "off",
        },
      },
    ],
    "plugins": [
      "import",
      "promise",
    ],
    "rules": {
      "accessor-pairs": [
        "error",
        {
          "enforceForClassMembers": true,
          "setWithoutGet": true,
        },
      ],
      "array-callback-return": [
        "error",
        {
          "allowImplicit": false,
          "checkForEach": false,
        },
      ],
      "block-scoped-var": "error",
      "constructor-super": "error",
      "curly": [
        "error",
        "multi-line",
      ],
      "default-case-last": "error",
      "eqeqeq": [
        "error",
        "always",
        {
          "null": "ignore",
        },
      ],
      "for-direction": "error",
      "import-x/first": "error",
      "import-x/no-absolute-path": [
        "error",
        {
          "amd": false,
          "commonjs": true,
          "esmodule": true,
        },
      ],
      "import-x/no-duplicates": "error",
      "import-x/no-named-default": "error",
      "import-x/no-webpack-loader-syntax": "error",
      "new-cap": [
        "error",
        {
          "capIsNew": false,
          "newIsCap": true,
          "properties": true,
        },
      ],
      "no-array-constructor": "error",
      "no-async-promise-executor": "error",
      "no-caller": "error",
      "no-case-declarations": "error",
      "no-class-assign": "error",
      "no-compare-neg-zero": "error",
      "no-cond-assign": "error",
      "no-const-assign": "error",
      "no-constant-condition": [
        "error",
        {
          "checkLoops": false,
        },
      ],
      "no-control-regex": "error",
      "no-debugger": "error",
      "no-delete-var": "error",
      "no-dupe-class-members": "error",
      "no-dupe-else-if": "error",
      "no-dupe-keys": "error",
      "no-duplicate-case": "error",
      "no-empty": [
        "error",
        {
          "allowEmptyCatch": true,
        },
      ],
      "no-empty-character-class": "error",
      "no-empty-pattern": "error",
      "no-eval": "error",
      "no-ex-assign": "error",
      "no-extend-native": "error",
      "no-extra-bind": "error",
      "no-extra-boolean-cast": "error",
      "no-fallthrough": "error",
      "no-func-assign": "error",
      "no-global-assign": "error",
      "no-import-assign": "error",
      "no-invalid-regexp": "error",
      "no-irregular-whitespace": "error",
      "no-iterator": "error",
      "no-labels": [
        "error",
        {
          "allowLoop": false,
          "allowSwitch": false,
        },
      ],
      "no-lone-blocks": "error",
      "no-lonely-if": "error",
      "no-loss-of-precision": "error",
      "no-multi-str": "error",
      "no-nested-ternary": "error",
      "no-new-func": "error",
      "no-new-native-nonconstructor": "error",
      "no-new-wrappers": "error",
      "no-obj-calls": "error",
      "no-object-constructor": "error",
      "no-proto": "error",
      "no-prototype-builtins": "error",
      "no-redeclare": [
        "error",
        {
          "builtinGlobals": false,
        },
      ],
      "no-regex-spaces": "error",
      "no-return-assign": [
        "error",
        "except-parens",
      ],
      "no-self-assign": [
        "error",
        {
          "props": true,
        },
      ],
      "no-self-compare": "error",
      "no-sequences": "error",
      "no-setter-return": "error",
      "no-shadow-restricted-names": "error",
      "no-sparse-arrays": "error",
      "no-template-curly-in-string": "error",
      "no-this-before-super": "error",
      "no-throw-literal": "error",
      "no-unassigned-vars": "error",
      "no-unexpected-multiline": "error",
      "no-unneeded-ternary": [
        "error",
        {
          "defaultAssignment": false,
        },
      ],
      "no-unsafe-finally": "error",
      "no-unsafe-negation": "error",
      "no-unsafe-optional-chaining": "error",
      "no-unused-expressions": [
        "error",
        {
          "allowShortCircuit": true,
          "allowTaggedTemplates": true,
          "allowTernary": true,
        },
      ],
      "no-unused-vars": [
        "error",
        {
          "args": "after-used",
          "vars": "all",
        },
      ],
      "no-useless-backreference": "error",
      "no-useless-call": "error",
      "no-useless-catch": "error",
      "no-useless-computed-key": "error",
      "no-useless-constructor": "error",
      "no-useless-escape": "error",
      "no-useless-rename": "error",
      "no-useless-return": "error",
      "no-var": "warn",
      "no-void": "error",
      "no-with": "error",
      "prefer-exponentiation-operator": "error",
      "prefer-promise-reject-errors": "error",
      "prefer-rest-params": "error",
      "prefer-spread": "error",
      "preserve-caught-error": "error",
      "promise/param-names": "error",
      "require-yield": "error",
      "symbol-description": "error",
      "use-isnan": [
        "error",
        {
          "enforceForIndexOf": true,
          "enforceForSwitchCase": true,
        },
      ],
      "valid-typeof": [
        "error",
        {
          "requireStringLiterals": true,
        },
      ],
      "yoda": [
        "error",
        "never",
      ],
    },
  },
  "skipped": {
    "nursery": [
      "getter-return",
      "import-x/export",
      "no-misleading-character-class",
      "no-undef",
      "no-unreachable",
    ],
    "typeAware": [],
    "unsupported": [
      "camelcase",
      "dot-notation",
      "func-name-matching",
      "n/global-require",
      "n/handle-callback-err",
      "n/no-deprecated-api",
      "n/no-exports-assign",
      "n/no-extraneous-require",
      "n/no-missing-require",
      "n/no-new-require",
      "n/no-path-concat",
      "n/no-unpublished-require",
      "n/no-unsupported-features/es-builtins",
      "n/no-unsupported-features/es-syntax",
      "n/no-unsupported-features/node-builtins",
      "n/prefer-node-protocol",
      "n/process-exit-as-throw",
      "no-dupe-args",
      "no-implied-eval",
      "no-invalid-this",
      "no-octal",
      "no-octal-escape",
      "no-shadow",
      "no-undef-init",
      "no-unmodified-loop-condition",
      "no-unreachable-loop",
      "no-use-before-define",
      "object-shorthand",
      "one-var",
      "perfectionist/sort-array-includes",
      "perfectionist/sort-classes",
      "perfectionist/sort-decorators",
      "perfectionist/sort-enums",
      "perfectionist/sort-export-attributes",
      "perfectionist/sort-exports",
      "perfectionist/sort-heritage-clauses",
      "perfectionist/sort-import-attributes",
      "perfectionist/sort-imports",
      "perfectionist/sort-interfaces",
      "perfectionist/sort-intersection-types",
      "perfectionist/sort-jsx-props",
      "perfectionist/sort-maps",
      "perfectionist/sort-named-exports",
      "perfectionist/sort-named-imports",
      "perfectionist/sort-object-types",
      "perfectionist/sort-objects",
      "perfectionist/sort-sets",
      "perfectionist/sort-switch-case",
      "perfectionist/sort-union-types",
      "perfectionist/sort-variable-declarations",
      "prefer-arrow-callback",
      "prefer-let/prefer-let",
      "prefer-regex-literals",
    ],
  },
  "warnings": [],
}
`;

exports[`autoprefixer merge > autoprefixer--merge 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "error",
      "perf": "error",
    },
    "env": {
      "builtin": true,
      "es2024": true,
      "node": true,
    },
    "globals": {
      "document": "readonly",
      "window": "readonly",
    },
    "ignorePatterns": [
      "coverage",
    ],
    "overrides": [
      {
        "files": [
          "**/*.test.{js,jsx}",
          "**/*.test.{ts,tsx}",
        ],
        "rules": {
          "no-unused-expressions": "off",
        },
      },
    ],
    "plugins": [
      "import",
      "promise",
    ],
    "rules": {
      "accessor-pairs": [
        "error",
        {
          "enforceForClassMembers": true,
          "setWithoutGet": true,
        },
      ],
      "array-callback-return": [
        "error",
        {
          "allowImplicit": false,
          "checkForEach": false,
        },
      ],
      "block-scoped-var": "error",
      "curly": [
        "error",
        "multi-line",
      ],
      "default-case-last": "error",
      "eqeqeq": [
        "error",
        "always",
        {
          "null": "ignore",
        },
      ],
      "import-x/first": "error",
      "import-x/no-absolute-path": [
        "error",
        {
          "amd": false,
          "commonjs": true,
          "esmodule": true,
        },
      ],
      "import-x/no-duplicates": "error",
      "import-x/no-named-default": "error",
      "import-x/no-webpack-loader-syntax": "error",
      "new-cap": [
        "error",
        {
          "capIsNew": false,
          "newIsCap": true,
          "properties": true,
        },
      ],
      "no-array-constructor": "error",
      "no-case-declarations": "error",
      "no-console": "error",
      "no-constant-condition": [
        "error",
        {
          "checkLoops": false,
        },
      ],
      "no-empty": [
        "error",
        {
          "allowEmptyCatch": true,
        },
      ],
      "no-extend-native": "error",
      "no-extra-bind": "error",
      "no-fallthrough": "error",
      "no-iterator": "error",
      "no-labels": [
        "error",
        {
          "allowLoop": false,
          "allowSwitch": false,
        },
      ],
      "no-lone-blocks": "error",
      "no-lonely-if": "error",
      "no-multi-str": "error",
      "no-nested-ternary": "error",
      "no-new-func": "error",
      "no-new-wrappers": "error",
      "no-object-constructor": "error",
      "no-proto": "error",
      "no-prototype-builtins": "error",
      "no-redeclare": [
        "error",
        {
          "builtinGlobals": false,
        },
      ],
      "no-regex-spaces": "error",
      "no-return-assign": [
        "error",
        "except-parens",
      ],
      "no-self-assign": [
        "error",
        {
          "props": true,
        },
      ],
      "no-self-compare": "error",
      "no-sequences": "error",
      "no-template-curly-in-string": "error",
      "no-throw-literal": "error",
      "no-unexpected-multiline": "error",
      "no-unneeded-ternary": [
        "error",
        {
          "defaultAssignment": false,
        },
      ],
      "no-unused-expressions": [
        "error",
        {
          "allowShortCircuit": true,
          "allowTaggedTemplates": true,
          "allowTernary": true,
        },
      ],
      "no-unused-vars": [
        "error",
        {
          "args": "after-used",
          "vars": "all",
        },
      ],
      "no-useless-computed-key": "error",
      "no-useless-constructor": "error",
      "no-useless-return": "error",
      "no-var": "warn",
      "no-void": "error",
      "prefer-exponentiation-operator": "error",
      "prefer-promise-reject-errors": "error",
      "prefer-rest-params": "error",
      "prefer-spread": "error",
      "preserve-caught-error": "error",
      "promise/param-names": "error",
      "symbol-description": "error",
      "use-isnan": [
        "error",
        {
          "enforceForIndexOf": true,
          "enforceForSwitchCase": true,
        },
      ],
      "valid-typeof": [
        "error",
        {
          "requireStringLiterals": true,
        },
      ],
      "yoda": [
        "error",
        "never",
      ],
    },
  },
  "skipped": {
    "nursery": [
      "getter-return",
      "import-x/export",
      "no-misleading-character-class",
      "no-undef",
      "no-unreachable",
    ],
    "typeAware": [],
    "unsupported": [
      "camelcase",
      "dot-notation",
      "func-name-matching",
      "n/global-require",
      "n/handle-callback-err",
      "n/no-deprecated-api",
      "n/no-exports-assign",
      "n/no-extraneous-require",
      "n/no-missing-require",
      "n/no-new-require",
      "n/no-path-concat",
      "n/no-unpublished-require",
      "n/no-unsupported-features/es-builtins",
      "n/no-unsupported-features/es-syntax",
      "n/no-unsupported-features/node-builtins",
      "n/prefer-node-protocol",
      "n/process-exit-as-throw",
      "no-dupe-args",
      "no-implied-eval",
      "no-invalid-this",
      "no-octal",
      "no-octal-escape",
      "no-shadow",
      "no-undef-init",
      "no-unmodified-loop-condition",
      "no-unreachable-loop",
      "no-use-before-define",
      "object-shorthand",
      "one-var",
      "perfectionist/sort-array-includes",
      "perfectionist/sort-classes",
      "perfectionist/sort-decorators",
      "perfectionist/sort-enums",
      "perfectionist/sort-export-attributes",
      "perfectionist/sort-exports",
      "perfectionist/sort-heritage-clauses",
      "perfectionist/sort-import-attributes",
      "perfectionist/sort-imports",
      "perfectionist/sort-interfaces",
      "perfectionist/sort-intersection-types",
      "perfectionist/sort-jsx-props",
      "perfectionist/sort-maps",
      "perfectionist/sort-named-exports",
      "perfectionist/sort-named-imports",
      "perfectionist/sort-object-types",
      "perfectionist/sort-objects",
      "perfectionist/sort-sets",
      "perfectionist/sort-switch-case",
      "perfectionist/sort-union-types",
      "perfectionist/sort-variable-declarations",
      "prefer-arrow-callback",
      "prefer-let/prefer-let",
      "prefer-regex-literals",
    ],
  },
  "warnings": [],
}
`;
